# comprende-ya

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURRICULUM_PLANNER_AGENT.md  Dockerfile  Makefile  NEXT_STEPS.md  Procfile  README.md  REFINE_GRAPH_MODEL.md  UPDATED_KG.md  benchmark.py  concept_graph.json  diagnostic.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_client.py  voice_agent_local.py  voice_agent_server.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0ec4b4ee0c36_add_videosegments.py  (+12 more)
comprende-ya-mcp/: Dockerfile  pyproject.toml
comprende-ya-mcp/curriculum/: a1_seed.yaml
comprende-ya-mcp/mcp_server/: assessment.py  b2_seed.py  db.py  graph_schema.py  learner_model.py  llm_client.py  models.py  planner.py  seed.py  server.py
comprende-ya-mcp/mcp_server/tools/: assess_interaction.py  concepts.py  confusion_pairs.py  effective_contexts.py  ingest_evidence.py  learner.py  learner_state.py  next_topics.py  planner.py  record_attempt.py  session_context.py
comprende-ya-mcp/tests/: conftest.py  test_assessment.py  test_b2_seed.py  test_graph_traversal.py  test_learner_model.py  test_planner.py  test_planner_integration.py  test_spaced_repetition.py  test_tools.py
docs/: refactor-spec.md
mcp-server/: pyproject.toml
scripts/: backfill_phrase_markers.py
shared/: constants.ts
src/: config.py  db.py  main.py
tests/: conftest.py  test_autopsy_routes.py  test_chunk_prompts_service.py  test_chunks_routes.py  test_config_origins.py  test_db_fixture.py  test_phrase_autopsy_service.py  test_phrase_markers_service.py  test_processing_job_repository.py  test_profile_routes.py  test_recording_routes.py  test_search_route.py  test_segment_tokenizer.py  test_segments_routes.py  test_video_processing_markers.py  test_video_repository.py  test_videos_routes.py
voice-agent/: .dockerignore  Dockerfile  benchmark.py  comprende_serializer.py  diagnostic.py  mcp_client.py  pyproject.toml  session_interceptor.py  session_manager.py  test_client.py  voice_agent_local.py  voice_agent_pipecat.py  voice_agent_server.py
voice-agent/tests/: test_session_manager.py
webapp/: .cta.json  .dockerignore  .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  server.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+138 files in other folders)
