[project]
name = "es-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.8",
    "pipecat-ai>=0.0.99",
    "piper-tts>=1.3.0",
    "sounddevice>=0.5.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "vllm>=0.13.0",
]
