[project]
name = "voice-agent"
version = "0.1.0"
description = "Spanish voice agent with local STT/LLM/TTS pipeline"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.8",
    "pipecat-ai>=0.0.99",
    "pathvalidate>=3.0.0",  # missing transitive dep of piper-tts
    "piper-tts>=1.3.0",
    "sounddevice>=0.5.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "vllm>=0.13.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
    "numpy>=1.26.0",
    "fastmcp>=2.13",
]
